force-app/main/default/objects/Appointment_Event__e/Appointment_Event__e.object-meta.xml
<CustomObject>
  <label>Appointment Event</label>
  <pluralLabel>Appointment Events</pluralLabel>
</CustomObject>