force-app/main/default/objects/Appointment_Event__e/fields/AppointmentId__c.field-meta.xml
<CustomField>
  <fullName>AppointmentId__c</fullName>
  <label>Appointment Id</label>
  <type>Text</type>
  <length>18</length>
</CustomField>