force-app/main/default/objects/Appointment_Event__e/fields/PatientId__c.field-meta.xml
<CustomField>
  <fullName>PatientId__c</fullName>
  <label>Patient Id</label>
  <type>Text</type>
  <length>18</length>
</CustomField>